objects/JBCXM__SurveyDistributionSchedule__c.object
<CustomObject>
    <description>This is used to store scheduling job details.</description>
    <fields>
        <fullName>JBCXM__Date__c</fullName>
        <description>It represents when the schedule was created</description>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>JBCXM__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__EmailBatchSize__c</fullName>
        <description>To specify the batch size.</description>
        <label>Email Batch Size</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__EmailFailCount__c</fullName>
        <label>Email Fail Count</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__JobId__c</fullName>
        <description>To store the job Id after scheduling a job.</description>
        <label>Scheduled Job Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>JBCXM__PartcipantCount__c</fullName>
        <description>To specify number of participants selected while scheduling a job.</description>
        <label>Partcipant Count</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__ProcessedCount__c</fullName>
        <description>to know how many records are processed from total scheduled records.</description>
        <label>Processed Record Count</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__Reschedule__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check whether the schedule is  to Send or  Resend emails.</description>
        <label>Reschedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__ScheduleFrequency__c</fullName>
        <description>To specify schedule frequency like &quot;Daily&quot;, &apos;Weekly&apos;, ...</description>
        <label>Schedule Frequency</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__SendAddress__c</fullName>
        <label>Send Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__StartDate__c</fullName>
        <description>To specify when the schedule emails.</description>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>JBCXM__Status__c</fullName>
        <description>To know the job status.</description>
        <label>Job Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__SurveyId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey Id</label>
        <referenceTo>JBCXM__Survey__c</referenceTo>
        <relationshipLabel>Survey Distribution Schedule</relationshipLabel>
        <relationshipName>Survey_Distribution_Schedule</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__Template__c</fullName>
        <description>Template for resend</description>
        <label>Template</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Survey Distribution Schedule</label>
    <listViews>
        <fullName>JBCXM__All</fullName>
        <columns>JBCXM__EmailBatchSize__c</columns>
        <columns>NAME</columns>
        <columns>JBCXM__JobId__c</columns>
        <columns>JBCXM__StartDate__c</columns>
        <columns>JBCXM__PartcipantCount__c</columns>
        <columns>JBCXM__ProcessedCount__c</columns>
        <columns>JBCXM__Status__c</columns>
        <columns>JBCXM__SurveyId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>JBCXM__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Survey Distribution Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Distribution Schedule</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>